# llms-know-answer-73ae-claude

./: .gitignore  .resource_finder_complete  CODE_WALKTHROUGH.md  README.md  REPORT.md  download_datasets.py  download_papers.py  literature_review.md  planning.md  pyproject.toml  requirements.txt  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
datasets/: .gitignore  README.md  _download_report.json
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/appendix/: appendix.tex
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
papers/: README.md  _download_log.json  deep_read_notes.json
results/: env.json
results/evaluations/: exp2_probe.json  summary.json
results/model_outputs/: exp1_arc.json  exp1_gsm8k.json  exp3_strategyqa.json
src/: analyze.py  common.py  exp1_reactivity.py  exp2_probe.py  exp3_rotating.py
