[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.14.0",
    "arxiv>=4.0.0",
    "datasets>=5.0.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pypdf>=6.13.3",
    "requests>=2.33.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]

[tool.uv]
package = false
